--- a/AED/UT5_Actividad1_Eclipse/.classpath
+++ b/AED/UT5_Actividad1_Eclipse/.classpath
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Alumnadomañana/Desktop/DAM/AED/UT5_Actividad1_Eclipse/lib/db4o-8.0.249.16098-core-java5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
