--- a/AED/UT4_Actividad3/.project
+++ b/AED/UT4_Actividad3/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AED</name>
+	<name>UT4_Actividad3</name>
 	<comment></comment>
 	<projects>
 	</projects>
